--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,20 @@
-.nav-item{
-    padding: 5px;
+.nav2{
+    background-color: #1e3932;
+    color: white;  
+    padding: 15px;   
+    display: flex;
+    justify-content: space-around;
+}
+.nav2-text{
+
+}
+.nav2 button{
+    border-radius: 15px;
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 20px;
+    color: white;
+    background-color: #1e3932;
+    border-color: white;
 }
