--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,15 @@
+.container-fluid{
+    padding-left: 100px;
+}
+
+.SearchBar{
+    width: 265px;
+    padding-left: 8px;
+    border-radius: 50px;
+}
+/* .SearchBar ::placeholder{
+    text
+} */
 .nav2{
     background-color: #1e3932;
     color: white;  
@@ -5,9 +17,7 @@
     display: flex;
     justify-content: space-around;
 }
-.nav2-text{
 
-}
 .nav2 button{
     border-radius: 15px;
     height: 30px;
@@ -17,4 +27,4 @@
     color: white;
     background-color: #1e3932;
     border-color: white;
-}
+} 
