--- a/Css/style.css
+++ b/Css/style.css
@@ -28,3 +28,12 @@
     background-color: #1e3932;
     border-color: white;
 } 
+
+footer{
+    background-color: #1e3932;
+    
+}
+.aboutus{
+    text-decoration: none;
+
+}
