--- a/Css/style.css
+++ b/Css/style.css
@@ -29,11 +29,8 @@
     border-color: white;
 } 
 
-footer{
-    background-color: #1e3932;
-    
-}
-.aboutus{
-    text-decoration: none;
 
+.view-menu-link{
+    text-decoration: none;
 }
+
