--- a/Css/style.css
+++ b/Css/style.css
@@ -34,3 +34,48 @@
     text-decoration: none;
 }
 
+.cards{
+    justify-content: space-evenly;
+}
+.cards-content{
+    border: 1px solid white;
+    width: 350px;
+    height: 160px;
+    background-color: white;
+    border-radius: 8px;
+    
+}
+
+.card-img img{
+    height: 90px;
+    width: 90px;
+    border-radius: 9px;
+    margin-left: 25px;
+    margin-top: 18px;
+}
+
+.card-about{
+    margin-top: 18px;
+    /* background-color: aqua; */
+    width: 500px;
+    height: 90px;
+}
+.card-title h3{
+    font-size: medium;
+}
+
+.card-subtitle span{
+    font-size: small;
+}
+
+.card-bottom{
+    justify-content: space-between;
+}
+.card-price h4{
+    margin-left: 25px;
+}
+.card-add-item button{
+    background-color: #00754a;
+    border-radius: 30px;
+    margin-right: 25px;
+}
